--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.7'
+    id 'org.springframework.boot' version '3.3.6'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'miracle'
 version = '0.0.1-SNAPSHOT'
 description = 'E-um'
+
+ext {
+    set('springCloudVersion', "2023.0.2")
+}
 
 allprojects {
     repositories {
@@ -24,9 +28,9 @@ allprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-security'
-        implementation 'org.springframework.boot:spring-boot-starter-web'
 
         // JWT
         implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
@@ -42,6 +46,12 @@ allprojects {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.springframework.security:spring-security-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
     }
 
     tasks.named('test') {
