--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ allprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
         compileOnly 'org.projectlombok:lombok'
-        runtimeOnly 'com.mysql:mysql-connector-j'
+        runtimeOnly 'org.postgresql:postgresql'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.springframework.security:spring-security-test'
